--- a/TimHackServer/Info.plist
+++ b/TimHackServer/Info.plist
@@ -4,6 +4,14 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>The app would use your location</string>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>The app would use your location</string>
+	<key>NSLocationUsageDescription</key>
+	<string>The app would use your location</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>The app would use your location</string>
 	<key>CFBundleExecutable</key>
 	<string>$(EXECUTABLE_NAME)</string>
 	<key>CFBundleIdentifier</key>
